tests/negative/gold/incomplete_string_interpolation_test.gold
tests/negative/incomplete_string_interpolation_test.toit:6:12: error: Incomplete expression
  print "$( /* " // */
           ^~~~~~~~~~~
tests/negative/incomplete_string_interpolation_test.toit:6:11: error: Missing closing ')'
  print "$( /* " // */
          ^~~~~~~~~~~~
tests/negative/incomplete_string_interpolation_test.toit:9:13: error: Unterminated string
  unresolved
            ^
tests/negative/incomplete_string_interpolation_test.toit:14:14: error: Incomplete expression
  print """$( /* """ // */
             ^~~~~~~~~~~~~
tests/negative/incomplete_string_interpolation_test.toit:14:13: error: Missing closing ')'
  print """$( /* """ // */
            ^~~~~~~~~~~~~~
tests/negative/incomplete_string_interpolation_test.toit:23:13: error: Missing closing ')'
  print """$(4     // Gives an error about not being allowed to call an expression.
            ^
tests/negative/incomplete_string_interpolation_test.toit:12:3: error: Unresolved identifier: 'unresolved2'
  unresolved2  // Gives an error.
  ^~~~~~~~~~~
tests/negative/incomplete_string_interpolation_test.toit:21:3: error: Unresolved identifier: 'unresolved3'
  unresolved3  // Gives an error.
  ^~~~~~~~~~~
tests/negative/incomplete_string_interpolation_test.toit:24:5: error: Unresolved identifier: 'unresolved4'
    unresolved4  // Gives an error.
    ^~~~~~~~~~~
tests/negative/incomplete_string_interpolation_test.toit:23:14: error: Can't call result of evaluating expression
  print """$(4     // Gives an error about not being allowed to call an expression.
             ^
tests/negative/incomplete_string_interpolation_test.toit:28:6: error: Argument mismatch for 'bar'
Method does not take any arguments, but one was provided
bar: bar 3  // This line is again active.
     ^~~
Compilation failed.
